# crewai

./: README.md  pyproject.toml  report.md
src/repo_crewai/: crew.py  main_crew.py  new0.py  new4.py  new6.py
src/repo_crewai/app/: app.py
src/repo_crewai/app/templates/: index.html
src/repo_crewai/config/: agents copy.yaml  agents.yaml  tasks.yaml
